feat: implement multi-agent research system with LangGraph orchestration
- Add 5 specialized agents (supervisor, news_scraper, social_media, deep_analyzer, content_synthesizer)
- Add LangGraph workflow with state management, conditional edges, and error handling
- Add scrapers for NewsAPI, Google News RSS, PTT, Threads, LinkedIn with SSRF protection
- Add memory system with SQLite storage, Chroma vector store, feedback processing
- Add Pydantic data models (ResearchRequest, ContentItem, VideoMaterial)
- Add Streamlit UI components (topic input, results display, feedback panel, progress tracker)
- Add history page to persist research results across sessions
- Add preferences page for user settings
- Apply Tech Innovation theme (Electric Blue + Neon Cyan) to Streamlit UI
- Add comprehensive unit, integration, and E2E test suites
- Add pydantic-settings config, LLM factory, rate limiter utilities
- Update README with full architecture docs, env vars, and dev commands
- Add CONTRIB.md and RUNBOOK.md operational documentation

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,26 @@
-# OpenAI
+# === API Keys ===
 OPENAI_API_KEY=sk-xxx
-
-# Anthropic
 ANTHROPIC_API_KEY=sk-ant-xxx
+NEWSAPI_KEY=xxx
 
-# Optional: Other API keys
-# GOOGLE_API_KEY=xxx
+# === LLM 設定 ===
+LLM_PROVIDER=openai          # openai | anthropic
+LLM_MODEL=gpt-4o-mini        # 模型名稱
+LLM_TEMPERATURE=0.7          # 0.0 ~ 2.0
+LLM_MAX_TOKENS=4096          # 最大 token 數
+EMBEDDING_MODEL=text-embedding-3-small
+
+# === 速率限制 ===
+RATE_LIMIT_REQUESTS_PER_MINUTE=60
+
+# === 快取 ===
+CACHE_TTL_SECONDS=3600
+CACHE_DIR=data/cache
+
+# === 記憶系統 ===
+MEMORY_DB_PATH=data/memory/memory.db
+VECTORSTORE_DIR=data/memory/vectorstore
+
+# === 應用程式 ===
+DEBUG=false
+LOG_LEVEL=INFO                # DEBUG | INFO | WARNING | ERROR
