--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,28 @@ dependencies = [
     "httpx>=0.27.0",
     "python-dotenv>=1.0.1",
     "pydantic>=2.10.0",
+    # Phase 1: 基礎設施
+    "langgraph>=1.0.7",
+    "chromadb>=1.4.1",
+    "feedparser>=6.0.12",
+    "aiosqlite>=0.22.1",
+    "tenacity>=9.1.2",
+    "pydantic-settings>=2.12.0",
 ]
 
 [tool.uv]
 dev-dependencies = [
+    "playwright>=1.58.0",
     "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
     "pytest-cov>=4.1.0",
+    "pytest-playwright>=0.7.2",
     "ruff>=0.9.0",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+asyncio_mode = "auto"
+markers = [
+    "e2e: end-to-end tests requiring a running Streamlit server",
 ]
